ext/mvc/view/engine/volt/scanner.c
/* Generated by re2c 0.13.5 on Wed Apr 29 14:00:41 2015 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#include "php_phalcon.h"
#include "mvc/view/engine/volt/scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

void phvolt_rtrim(phvolt_scanner_token *token) {

	char *cursor, *removed_str;
	int i;
	char ch;

	if (token->len > 0) {

		cursor = token->value;
		cursor += (token->len - 1);
		for (i = token->len; i > 0; i--) {
			ch = (*cursor);
			if (ch == '\t' || ch == '\n' || ch == '\r' || ch == ' ' || ch == '\v') {
				cursor--;
				continue;
			}
			break;
		}

        if (i >= 0) {
    		removed_str = emalloc(i + 1);
    		memcpy(removed_str, token->value, i);
    		removed_str[i] = '\0';

    		efree(token->value);
    		token->value = removed_str;
    		token->len = i;
        }
	}

}

void phvolt_ltrim(phvolt_scanner_token *token) {

	char *cursor, *removed_str;
	int i;

	if (token->len > 0) {

		cursor = token->value;
		for (i = 0; i < token->len; i++) {
			char ch = (*cursor);
			if (ch == '\t' || ch == '\n' || ch == '\r' || ch == ' ' || ch == '\v') {
				cursor++;
				continue;
			}
			break;
		}

        if (i >= 0) {
    		removed_str = emalloc(token->len - i + 1);
    		memcpy(removed_str, token->value + i, token->len - i);
    		removed_str[token->len - i] = '\0';

    		efree(token->value);
    		token->value = removed_str;
    		token->len = token->len - i;
        }
	}

}

int phvolt_get_token(phvolt_scanner_state *s, phvolt_scanner_token *token) {

	unsigned char next, double_next;
	char *q = YYCURSOR, *start = YYCURSOR;
	int status = PHVOLT_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHVOLT_SCANNER_RETCODE_IMPOSSIBLE == status) {

		if (s->mode == PHVOLT_MODE_RAW || s->mode == PHVOLT_MODE_COMMENT) {

			next = '\0';
			double_next = '\0';

			if (*YYCURSOR == '\n') {
				s->active_line++;
			}

			if (*YYCURSOR != '\0') {
				next = *(YYCURSOR + 1);
				if (next != '\0') {
					double_next = *(YYCURSOR + 2);
				}
			}

			if (*YYCURSOR == '\0' || (*YYCURSOR == '{' && (next == '%' || next == '{' || next == '#'))) {

				if (next != '#') {

					s->mode = PHVOLT_MODE_CODE;

					if (s->raw_buffer_cursor > 0) {

						token->opcode = PHVOLT_T_RAW_FRAGMENT;
						token->value = emalloc(sizeof(char) * s->raw_buffer_cursor + 1);
						memcpy(token->value, s->raw_buffer, s->raw_buffer_cursor);
						token->value[s->raw_buffer_cursor] = 0;
						token->len = s->raw_buffer_cursor;

						if (s->whitespace_control == 1) {
							phvolt_ltrim(token);
							s->whitespace_control = 0;
						}

						if (double_next == '-') {
							phvolt_rtrim(token);
						}

						s->raw_buffer_cursor = 0;
						q = YYCURSOR;
					} else {
						token->opcode = PHVOLT_T_IGNORE;
					}

				} else {

					while ((next = *(++YYCURSOR))) {
						if (next == '#' && *(YYCURSOR + 1) == '}') {
							YYCURSOR+=2;
							token->opcode = PHVOLT_T_IGNORE;
							return 0;
						} else {
							if (next == '\n') {
								s->active_line++;
							}
						}
					}

					return PHVOLT_SCANNER_RETCODE_EOF;
				}

				return 0;

			} else {

				if (s->raw_buffer_cursor == s->raw_buffer_size) {
					s->raw_buffer_size += PHVOLT_RAW_BUFFER_SIZE;
					s->raw_buffer = erealloc(s->raw_buffer, s->raw_buffer_size);
				}

				memcpy(s->raw_buffer+s->raw_buffer_cursor, YYCURSOR, 1);
				s->raw_buffer_cursor++;

				++YYCURSOR;
			}

		} else {

		
/* #line 181 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  48,  48,  48,  48,  48,  48,  48, 
				 48,  52,  48,  48,  48,  52,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				116,  48,  16,  48,  48,  48,  48,  32, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				184, 184, 184, 184, 184, 184, 184, 184, 
				184, 184,  48,  48,  48,  48,  48,  48, 
				 48,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  48,   8,  48,  48,  56, 
				 48,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  56,  56,  56,  56,  56, 
				 56,  56,  56,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
			};

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy71;
			case '\t':
			case '\r':
			case ' ':	goto yy67;
			case '\n':	goto yy69;
			case '!':	goto yy59;
			case '"':	goto yy28;
			case '%':	goto yy22;
			case '\'':	goto yy30;
			case '(':	goto yy45;
			case ')':	goto yy47;
			case '*':	goto yy35;
			case '+':	goto yy33;
			case ',':	goto yy43;
			case '-':	goto yy24;
			case '.':	goto yy41;
			case '/':	goto yy37;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy2;
			case ':':	goto yy63;
			case '<':	goto yy53;
			case '=':	goto yy55;
			case '>':	goto yy57;
			case '?':	goto yy65;
			case 'A':
			case 'a':	goto yy12;
			case 'B':
			case 'b':	goto yy14;
			case 'C':
			case 'c':	goto yy16;
			case 'D':
			case 'd':	goto yy19;
			case 'E':
			case 'e':	goto yy7;
			case 'F':
			case 'f':	goto yy8;
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'L':
			case 'P':
			case 'Q':
			case 'U':
			case 'V':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'l':
			case 'p':
			case 'q':
			case 'u':
			case 'v':
			case 'x':
			case 'y':
			case 'z':	goto yy32;
			case 'I':	goto yy4;
			case 'M':
			case 'm':	goto yy15;
			case 'N':
			case 'n':	goto yy10;
			case 'O':
			case 'o':	goto yy13;
			case 'R':
			case 'r':	goto yy18;
			case 'S':
			case 's':	goto yy9;
			case 'T':
			case 't':	goto yy11;
			case 'W':
			case 'w':	goto yy17;
			case '[':	goto yy49;
			case '\\':	goto yy31;
			case ']':	goto yy51;
			case 'i':	goto yy6;
			case '{':	goto yy20;
			case '|':	goto yy61;
			case '}':	goto yy26;
			case '~':	goto yy39;
			default:	goto yy73;
			}
yy2:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy341;
yy3:
/* #line 182 "scanner.re" */
			{
			token->opcode = PHVOLT_T_INTEGER;
			token->value = estrndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			q = YYCURSOR;
			return 0;
		}
/* #line 329 "scanner.c" */
yy4:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= 'T') {
				if (yych <= 'M') {
					if (yych == 'F') goto yy303;
					goto yy101;
				} else {
					if (yych <= 'N') goto yy305;
					if (yych <= 'R') goto yy101;
					if (yych <= 'S') goto yy307;
					goto yy309;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy303;
					if (yych <= 'm') goto yy101;
					goto yy305;
				} else {
					if (yych <= 'r') goto yy101;
					if (yych <= 's') goto yy307;
					if (yych <= 't') goto yy309;
					goto yy101;
				}
			}
yy5:
/* #line 495 "scanner.re" */
			{
			token->opcode = PHVOLT_T_IDENTIFIER;
			token->value = estrndup(start, YYCURSOR - start);
			token->len = YYCURSOR - start;
			q = YYCURSOR;
			return 0;
		}
/* #line 363 "scanner.c" */
yy6:
			yych = *++YYCURSOR;
			if (yych <= 'T') {
				if (yych <= 'M') {
					if (yych == 'F') goto yy303;
					goto yy101;
				} else {
					if (yych <= 'N') goto yy305;
					if (yych <= 'R') goto yy101;
					if (yych <= 'S') goto yy307;
					goto yy309;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy303;
					if (yych <= 'm') goto yy101;
					goto yy305;
				} else {
					if (yych <= 'r') goto yy101;
					if (yych <= 's') goto yy310;
					if (yych <= 't') goto yy309;
					goto yy101;
				}
			}
yy7:
			yych = *++YYCURSOR;
			if (yych <= 'X') {
				if (yych <= 'N') {
					if (yych <= 'K') goto yy101;
					if (yych <= 'L') goto yy235;
					if (yych <= 'M') goto yy236;
					goto yy237;
				} else {
					if (yych == 'V') goto yy238;
					if (yych <= 'W') goto yy101;
					goto yy239;
				}
			} else {
				if (yych <= 'n') {
					if (yych <= 'k') goto yy101;
					if (yych <= 'l') goto yy235;
					if (yych <= 'm') goto yy236;
					goto yy237;
				} else {
					if (yych <= 'v') {
						if (yych <= 'u') goto yy101;
						goto yy238;
					} else {
						if (yych == 'x') goto yy239;
						goto yy101;
					}
				}
			}
yy8:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'A') goto yy227;
				if (yych <= 'N') goto yy101;
				goto yy228;
			} else {
				if (yych <= 'a') {
					if (yych <= '`') goto yy101;
					goto yy227;
				} else {
					if (yych == 'o') goto yy228;
					goto yy101;
				}
			}
yy9:
			yych = *++YYCURSOR;
			if (yych <= 'E') {
				if (yych == 'C') goto yy218;
				if (yych <= 'D') goto yy101;
				goto yy219;
			} else {
				if (yych <= 'c') {
					if (yych <= 'b') goto yy101;
					goto yy218;
				} else {
					if (yych == 'e') goto yy219;
					goto yy101;
				}
			}
yy10:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy205;
				if (yych <= 'T') goto yy101;
				goto yy206;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy101;
					goto yy205;
				} else {
					if (yych == 'u') goto yy206;
					goto yy101;
				}
			}
yy11:
			yych = *++YYCURSOR;
			if (yych == 'R') goto yy201;
			if (yych == 'r') goto yy201;
			goto yy101;
yy12:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'N') goto yy188;
				if (yych <= 'T') goto yy101;
				goto yy189;
			} else {
				if (yych <= 'n') {
					if (yych <= 'm') goto yy101;
					goto yy188;
				} else {
					if (yych == 'u') goto yy189;
					goto yy101;
				}
			}
yy13:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'D') goto yy183;
				if (yych <= 'Q') goto yy101;
				goto yy184;
			} else {
				if (yych <= 'd') {
					if (yych <= 'c') goto yy101;
					goto yy183;
				} else {
					if (yych == 'r') goto yy184;
					goto yy101;
				}
			}
yy14:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'L') goto yy173;
				if (yych <= 'Q') goto yy101;
				goto yy174;
			} else {
				if (yych <= 'l') {
					if (yych <= 'k') goto yy101;
					goto yy173;
				} else {
					if (yych == 'r') goto yy174;
					goto yy101;
				}
			}
yy15:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy168;
			if (yych == 'a') goto yy168;
			goto yy101;
yy16:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'A') goto yy152;
				if (yych <= 'N') goto yy101;
				goto yy153;
			} else {
				if (yych <= 'a') {
					if (yych <= '`') goto yy101;
					goto yy152;
				} else {
					if (yych == 'o') goto yy153;
					goto yy101;
				}
			}
yy17:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy148;
			if (yych == 'i') goto yy148;
			goto yy101;
yy18:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy142;
			if (yych == 'e') goto yy142;
			goto yy101;
yy19:
			yych = *++YYCURSOR;
			if (yych <= 'O') {
				if (yych == 'E') goto yy133;
				if (yych <= 'N') goto yy101;
				goto yy134;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy101;
					goto yy133;
				} else {
					if (yych == 'o') goto yy134;
					goto yy101;
				}
			}
yy20:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '%') goto yy127;
			if (yych == '{') goto yy125;
/* #line 578 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CBRACKET_OPEN;
			return 0;
		}
/* #line 566 "scanner.c" */
yy22:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '}') goto yy123;
/* #line 523 "scanner.re" */
			{
			token->opcode = PHVOLT_T_MOD;
			return 0;
		}
/* #line 575 "scanner.c" */
yy24:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= '-') {
				if (yych == '%') goto yy118;
				if (yych >= '-') goto yy115;
			} else {
				if (yych <= '=') {
					if (yych >= '=') goto yy113;
				} else {
					if (yych == '}') goto yy117;
				}
			}
yy25:
/* #line 508 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SUB;
			return 0;
		}
/* #line 595 "scanner.c" */
yy26:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '}') goto yy111;
/* #line 583 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CBRACKET_CLOSE;
			return 0;
		}
/* #line 604 "scanner.c" */
yy28:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych >= 0x01) goto yy109;
yy29:
/* #line 694 "scanner.re" */
			{
			status = PHVOLT_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 615 "scanner.c" */
yy30:
			yyaccept = 2;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy29;
			goto yy103;
yy31:
			yych = *++YYCURSOR;
			if (yych <= '^') {
				if (yych <= '@') goto yy29;
				if (yych <= 'Z') goto yy100;
				goto yy29;
			} else {
				if (yych == '`') goto yy29;
				if (yych <= 'z') goto yy100;
				goto yy29;
			}
yy32:
			yych = *++YYCURSOR;
			goto yy101;
yy33:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '+') goto yy98;
			if (yych == '=') goto yy96;
/* #line 503 "scanner.re" */
			{
			token->opcode = PHVOLT_T_ADD;
			return 0;
		}
/* #line 644 "scanner.c" */
yy35:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy94;
/* #line 513 "scanner.re" */
			{
			token->opcode = PHVOLT_T_MUL;
			return 0;
		}
/* #line 653 "scanner.c" */
yy37:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy92;
/* #line 518 "scanner.re" */
			{
			token->opcode = PHVOLT_T_DIV;
			return 0;
		}
/* #line 662 "scanner.c" */
yy39:
			++YYCURSOR;
/* #line 538 "scanner.re" */
			{
			token->opcode = PHVOLT_T_CONCAT;
			return 0;
		}
/* #line 670 "scanner.c" */
yy41:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '.') goto yy90;
/* #line 548 "scanner.re" */
			{
			token->opcode = PHVOLT_T_DOT;
			return 0;
		}
/* #line 679 "scanner.c" */
yy43:
			++YYCURSOR;
/* #line 553 "scanner.re" */
			{
			token->opcode = PHVOLT_T_COMMA;
			return 0;
		}
/* #line 687 "scanner.c" */
yy45:
			++YYCURSOR;
/* #line 558 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 695 "scanner.c" */
yy47:
			++YYCURSOR;
/* #line 563 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 703 "scanner.c" */
yy49:
			++YYCURSOR;
/* #line 568 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SBRACKET_OPEN;
			return 0;
		}
/* #line 711 "scanner.c" */
yy51:
			++YYCURSOR;
/* #line 573 "scanner.re" */
			{
			token->opcode = PHVOLT_T_SBRACKET_CLOSE;
			return 0;
		}
/* #line 719 "scanner.c" */
yy53:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '<') goto yy54;
			if (yych <= '=') goto yy88;
			if (yych <= '>') goto yy86;
yy54:
/* #line 653 "scanner.re" */
			{
			token->opcode = PHVOLT_T_LESS;
			return 0;
		}
/* #line 731 "scanner.c" */
yy55:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy82;
/* #line 593 "scanner.re" */
			{
			token->opcode = PHVOLT_T_ASSIGN;
			return 0;
		}
/* #line 740 "scanner.c" */
yy57:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy80;
/* #line 658 "scanner.re" */
			{
			token->opcode = PHVOLT_T_GREATER;
			return 0;
		}
/* #line 749 "scanner.c" */
yy59:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy76;
/* #line 648 "scanner.re" */
			{
			token->opcode = PHVOLT_T_NOT;
			return 0;
		}
/* #line 758 "scanner.c" */
yy61:
			++YYCURSOR;
/* #line 663 "scanner.re" */
			{
			token->opcode = PHVOLT_T_PIPE;
			return 0;
		}
/* #line 766 "scanner.c" */
yy63:
			++YYCURSOR;
/* #line 668 "scanner.re" */
			{
			token->opcode = PHVOLT_T_COLON;
			return 0;
		}
/* #line 774 "scanner.c" */
yy65:
			++YYCURSOR;
/* #line 673 "scanner.re" */
			{
			token->opcode = PHVOLT_T_QUESTION;
			return 0;
		}
/* #line 782 "scanner.c" */
yy67:
			++YYCURSOR;
			yych = *YYCURSOR;
			goto yy75;
yy68:
/* #line 678 "scanner.re" */
			{
			token->opcode = PHVOLT_T_IGNORE;
			return 0;
		}
/* #line 793 "scanner.c" */
yy69:
			++YYCURSOR;
/* #line 683 "scanner.re" */
			{
			s->active_line++;
			token->opcode = PHVOLT_T_IGNORE;
			return 0;
		}
/* #line 802 "scanner.c" */
yy71:
			++YYCURSOR;
/* #line 689 "scanner.re" */
			{
			status = PHVOLT_SCANNER_RETCODE_EOF;
			break;
		}
/* #line 810 "scanner.c" */
yy73:
			yych = *++YYCURSOR;
			goto yy29;
yy74:
			++YYCURSOR;
			yych = *YYCURSOR;
yy75:
			if (yybm[0+yych] & 4) {
				goto yy74;
			}
			goto yy68;
yy76:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy78;
/* #line 628 "scanner.re" */
			{
			token->opcode = PHVOLT_T_NOTEQUALS;
			return 0;
		}
/* #line 830 "scanner.c" */
yy78:
			++YYCURSOR;
/* #line 643 "scanner.re" */
			{
			token->opcode = PHVOLT_T_NOTIDENTICAL;
			return 0;
		}
/* #line 838 "scanner.c" */
yy80:
